--- a/src/main/resources/BrickDestroy_GameEnd.fxml
+++ b/src/main/resources/BrickDestroy_GameEnd.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -11,78 +10,46 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane fx:id="gameBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BrickDestroy.JavaFX_StageController.JavaFXGameBoardController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BrickDestroy.JavaFX_StageController.EndGameController">
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true">
          <image>
             <Image url="@BrickDestroy_Level_Background.jpg" />
          </image></ImageView>
-      <Pane fx:id="gameBoardPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#onKeyPressed" onKeyReleased="#onKeyReleased" onKeyTyped="#onKeyTyped" prefHeight="400.0" prefWidth="600.0" StackPane.alignment="CENTER">
-         <children>
-            <Text fx:id="displayBallLeft" layoutX="14.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Balls left:" wrappingWidth="150.4000000000001">
-               <font>
-                  <Font name="Bauhaus 93" size="24.0" />
-               </font>
-            </Text>
-            <Text fx:id="playerCurrentLevelScore" layoutX="382.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score:" wrappingWidth="203.20001220703125">
-               <font>
-                  <Font name="Bauhaus 93" size="24.0" />
-               </font>
-            </Text>
-            <Text fx:id="pauseMessage" fill="RED" layoutX="167.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Press spacebar to play..." wrappingWidth="265.6640625">
-               <stroke>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="1.0" green="1.0" blue="1.0" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </stroke>
-               <font>
-                  <Font name="Bauhaus 93" size="24.0" />
-               </font>
-            </Text>
-         </children></Pane>
-      <VBox fx:id="highScoreBoard" alignment="TOP_CENTER" onKeyPressed="#pressSpaceToContinue" prefHeight="200.0" prefWidth="100.0" visible="false">
+      <VBox fx:id="highScoreBoard" alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="High Score" textAlignment="CENTER" wrappingWidth="285.46722412109375">
                <font>
                   <Font name="Bauhaus 93" size="48.0" />
                </font>
             </Text>
+            <Text fx:id="newHighScore" strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR NEW HIGH SCORE:" wrappingWidth="455.35701298713684">
+               <font>
+                  <Font name="Bauhaus 93" size="24.0" />
+               </font>
+            </Text>
             <GridPane fx:id="scorePane" maxWidth="-Infinity" prefHeight="290.0" prefWidth="475.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.39996337890625" minWidth="10.0" prefWidth="60.399973678588864" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="231.60002632141112" />
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.39996337890625" minWidth="10.0" prefWidth="60.399973678588864" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="231.60002632141112" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="496.79998779296875" minWidth="10.0" prefWidth="232.1999633789062" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </columnConstraints>
+               <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1." GridPane.rowIndex="1">
                      <font>
@@ -282,81 +249,21 @@
                   <Insets bottom="5.0" top="10.0" />
                </opaqueInsets>
             </GridPane>
-            <Text fx:id="displayCurrentScore" strokeType="OUTSIDE" strokeWidth="0.0" text="YOUR CURRENT SCORE:" wrappingWidth="296.15697026252747">
-               <font>
-                  <Font name="Bauhaus 93" size="24.0" />
-               </font>
-            </Text>
-            <Text fx:id="pauseMessage1" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" text="Press spacebar to continue..." wrappingWidth="363.2640390396118">
-               <stroke>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="1.0" green="1.0" blue="1.0" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </stroke>
-               <font>
-                  <Font name="Bauhaus 93" size="24.0" />
-               </font>
-            </Text>
-         </children>
-      </VBox>
-      <StackPane fx:id="pauseMenu" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#unpause" prefHeight="400.0" prefWidth="600.0" visible="false">
-         <children>
-            <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="file:/C:/Users/User/Desktop/Year%202/Software%20Maintenance/Coursework/COMP2042_CW_hcygh1/src/main/resources/BrickDestroy_PauseBackground.jpg" />
-               </image>
-            </ImageView>
-            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+            <Pane prefHeight="55.0" prefWidth="600.0">
                <children>
-                  <Text fill="WHITE" stroke="BLACK" strokeType="OUTSIDE" text="PAUSED">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
+                  <Button fx:id="exitGame" layoutX="481.0" layoutY="-1.0" mnemonicParsing="false" onAction="#exit" prefHeight="27.0" prefWidth="86.0" text="EXIT">
                      <font>
-                        <Font name="Bauhaus 93" size="69.0" />
+                        <Font name="Bauhaus 93" size="22.0" />
+                     </font>
+                  </Button>
+                  <Text fx:id="endMessage" layoutX="26.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your name and Exit to save." wrappingWidth="375.3569824695587">
+                     <font>
+                        <Font name="Bauhaus 93" size="24.0" />
                      </font>
                   </Text>
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#continueGame" prefHeight="70.0" prefWidth="150.0" text="Continue">
-                     <VBox.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                     </VBox.margin>
-                     <effect>
-                        <DropShadow />
-                     </effect>
-                     <font>
-                        <Font name="Bauhaus 93" size="24.0" />
-                     </font>
-                  </Button>
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#restartGame" prefHeight="70.0" prefWidth="150.0" text="Restart">
-                     <VBox.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="Bauhaus 93" size="24.0" />
-                     </font>
-                  </Button>
-                  <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#exitGame" prefHeight="70.0" prefWidth="150.0" text="Exit">
-                     <VBox.margin>
-                        <Insets bottom="10.0" top="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="Bauhaus 93" size="24.0" />
-                     </font>
-                  </Button>
                </children>
-            </VBox>
+            </Pane>
          </children>
-      </StackPane>
+      </VBox>
    </children>
 </StackPane>
